update express and api sendEmail

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "node src/server/server.js",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -15,7 +15,14 @@
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource-variable/onest": "^5.1.0",
     "astro": "^4.16.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "resend": "^4.0.1-alpha.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0"
   }
 }
