--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/node": "^8.3.4",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/node": "^9.0.2",
+    "@astrojs/starlight": "^0.31.1",
+    "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/onest": "^5.1.0",
-    "astro": "^4.16.7",
+    "astro": "^5.2.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "resend": "^4.0.1-alpha.0",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.9.0"
