--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/markdown-remark": "^6.1.0",
     "@astrojs/node": "^9.0.2",
     "@astrojs/starlight": "^0.31.1",
     "@astrojs/tailwind": "^6.0.0",
