--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/markdown-remark": "^6.1.0",
     "@astrojs/node": "^9.0.2",
-    "@astrojs/starlight": "^0.31.1",
+    "@astrojs/starlight": "^0.35.2",
     "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/onest": "^5.1.0",
     "astro": "^5.2.5",
@@ -23,7 +23,8 @@
     "resend": "^4.0.1-alpha.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22.9.0"
